fix z-index issue with map

--- a/voyages/sitemedia/scss/animations.scss
+++ b/voyages/sitemedia/scss/animations.scss
@@ -3,8 +3,12 @@
 @import "variables";
 @import "colors";
 
-#timelapse_control_layer {
-  z-index: 400;
+// #timelapse_control_layer {
+//   z-index: 400;
+// }
+
+.leaflet-pane {
+  z-index: 0 !important;
 }
 
 .voyage-info-container {
